# platform-router

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Program.cs  README.md  SECURITY.md  SensateService.sln  Startup.cs  appsettings.Development.json  build.cake  platform-network.sln  platform-router.sln  sensate-service.csproj  sensate-service.sln
AuthService/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.test  conanfile.py  conanfile.txt  docker-compose-dev.yml
AuthService/cmake/: flags.cmake  util.cmake
AuthService/include/sensateiot/: application.h  configparser.h  getopt.h
AuthService/libauthorization/: CMakeLists.txt
AuthService/libauthorization/config/: config.cpp  database.cpp  mqtt.cpp  mqttbroker.cpp
AuthService/libauthorization/include/: auth.h  sensateiot.h
AuthService/libauthorization/include/authorization/: apikey.h  mqttcallback.h  mqttclient.h  mqttinternalcallback.h  sensor.h  user.h
AuthService/libauthorization/include/compiler/: compiler-msvc.h  compiler.h
AuthService/libauthorization/include/config/: config.h  database.h  mqtt.h  mqttbroker.h
AuthService/libauthorization/include/sensateiot/: imqttclient.h  log.h  measurementhandler.h  messageservice.h  mqttcallback.h  mqttclient.h  mqttinternalcallback.h
AuthService/libauthorization/include/sensateiot/stl/: referencewrapper.h
AuthService/libauthorization/models/: apikey.cpp  sensor.cpp  user.cpp
AuthService/libauthorization/mqtt/: measurementhandler.cpp  messageservice.cpp  mqttcallback.cpp  mqttclient.cpp  mqttinternalcallback.cpp
AuthService/libauthorization/util/: log.cpp
AuthService/libauthorize/: CMakeLists.txt
AuthService/libauthorize/include/: auth.h
AuthService/libauthorize/include/auth/: apikey.h  sensor.h  user.h
AuthService/libauthorize/models/: apikey.cpp  sensor.cpp  user.cpp
AuthService/libsensateiot/: CMakeLists.txt
AuthService/libsensateiot/commands/: addkeycommandhandler.cpp  addsensorcommandhandler.cpp  addusercommandhandler.cpp  command.cpp  flushkeycommandhandler.cpp  flushsensorcommandhandler.cpp  flushusercommandhandler.cpp
AuthService/libsensateiot/config/: config.cpp  database.cpp  logging.cpp  mqtt.cpp  mqttbroker.cpp
AuthService/libsensateiot/consumers/: commandconsumer.cpp  measurementconsumer.cpp  messageconsumer.cpp
AuthService/libsensateiot/data/: bulkmeasurementvalidator.cpp  bulkmessagevalidator.cpp  datacache.cpp  measurementvalidator.cpp  messagevalidator.cpp  parser.h
AuthService/libsensateiot/http/: abstracthandler.cpp  bulkmeasurementhandler.cpp  bulkmessagehandler.cpp  measurementhandler.cpp  messagehandler.cpp  statushandler.cpp
AuthService/libsensateiot/httpd/: httplistener.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp  httpsession.cpp
AuthService/libsensateiot/include/: sensateiot.h
AuthService/libsensateiot/include/config/: config.h  database.h  logging.h  mqtt.h  mqttbroker.h
AuthService/libsensateiot/include/sensateiot/: abstractapikeyrepository.h  abstractuserrepository.h  apikeyrepository.h  messageservice.h  mongodbclient.h  userrepository.h  version.h
AuthService/libsensateiot/include/sensateiot/cache/: memorycache.h
AuthService/libsensateiot/include/sensateiot/commands/: abstractcommandhandler.h  addkeycommandhandler.h  addsensorcommandhandler.h  addusercommandhandler.h  command.h  flushkeycommandhandler.h  flushsensorcommandhandler.h  flushusercommandhandler.h
AuthService/libsensateiot/include/sensateiot/compiler/: compiler-msvc.h  compiler.h
AuthService/libsensateiot/include/sensateiot/consumers/: abstractconsumer.h  commandconsumer.h  measurementconsumer.h  messageconsumer.h
AuthService/libsensateiot/include/sensateiot/data/: bulkmeasurementvalidator.h  bulkmessagevalidator.h  datacache.h  measurementvalidator.h  memorycache.h  messagevalidator.h
AuthService/libsensateiot/include/sensateiot/detail/: memorycache.h  memorycache.hpp  redblacktree.h  redblacktree.hpp  redblacktreeiterator.h  redblacktreeiterator.hpp  redblacktreenode.h  redblacktreenode.hpp
AuthService/libsensateiot/include/sensateiot/http/: abstracthandler.h  bulkmeasurementhandler.h  bulkmessagehandler.h  measurementhandler.h  messagehandler.h  statushandler.h
AuthService/libsensateiot/include/sensateiot/httpd/: httplistener.h  httprequest.h  httpresponse.h  httpserver.h  httpsession.h
AuthService/libsensateiot/include/sensateiot/models/: apikey.h  measurement.h  message.h  objectid.h  rawmeasurement.h  sensor.h  user.h
AuthService/libsensateiot/include/sensateiot/mqtt/: basemqttclient.h  imqttclient.h  internalmqttclient.h  (+5 more)
AuthService/libsensateiot/models/: apikey.cpp  measurement.cpp  message.cpp  rawmeasurement.cpp  sensor.cpp  user.cpp
AuthService/libsensateiot/mqtt/: basemqttclient.cpp  internalmqttclient.cpp  measurementhandler.cpp  messageservice.cpp  mqttcallback.cpp  mqttclient.cpp  mqttinternalcallback.cpp
AuthService/libsensateiot/proto/: datapoint.proto  measurement.proto  message.proto
AuthService/libsensateiot/services/: abstractapikeyrepository.cpp  abstractpostgresqlrepository.cpp  abstractsensorrepository.cpp  abstractuserrepository.cpp  apikeyrepository.cpp  asyncmessageservice.cpp  messageservice.cpp  sensorrepository.cpp  userrepository.cpp
AuthService/libsensateiot/util/: base64.cpp  gzip.cpp  log.cpp  mongodbclient.cpp  mongodbclientpool.cpp  protobuf.cpp  sha256.c  sha256.cpp
AuthService/settings/: appsettings.json.example
AuthService/source/: application.cpp  configparser.cpp  getopt.c  getopt_win32.c  main.c
AuthService/tests/: CMakeLists.txt  httpd_test.cpp  map_test.cpp  memorycache-add_unit-tests.cpp  memorycache-generic_unit-tests.cpp  memorycache-lookup_unit-tests.cpp  memorycache-remove_unit-tests.cpp  memorycache-update_unit-tests.cpp  memorycache_test.cpp  messageservice_test.cpp  messageserviceintegration_test.cpp  mongdbclient_test.cpp  sha256_test.cpp  testapikeyrepository.h  testmqttclient.h  testsensorrepository.h  testuserrepository.h  validator_test.cpp  zip_test.cpp
(+2710 files in other folders)
